# diffarticulated

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  gpu-env.yml  ours_throw4.txt  q_torch_utils.h  requirements.txt  script.sh  setup.py  tiny_actuator.h  tiny_constraint_solver.h  tiny_double_utils.h  tiny_geometry.h  tiny_matrix3x3.h  tiny_matrix_x.h  tiny_mb_constraint_solver.h  tiny_metrics.h  tiny_multi_body.h  tiny_pose.h  tiny_quaternion.h  tiny_spatial_motion_vector.h  tiny_spatial_transform.h  tiny_symmetric_spatial_dyad.h  tiny_urdf_conversion.h  tiny_urdf_structures.h  tiny_urdf_to_multi_body.h  tiny_vector3.h  tiny_vector_x.h  tiny_world.h
data/: ant.xml  ant_torso.urdf  ant_torso1.urdf  ant_torso2.urdf  box_test.urdf  cartpole.urdf  pendulum1.urdf  pendulum2.urdf  pendulum3.urdf  pendulum4.urdf  pendulum5.urdf  pendulum6.urdf  pendulum7.urdf  plane_implicit.urdf  sphere2.urdf
data/franka_panda/: panda.urdf  panda_bak.urdf  panda_box.urdf  sphere2.urdf  sphere3.urdf
data/friction/: box_1joint.urdf  box_flat.urdf
data/grasp/: box_2pris.urdf  sphere2.urdf
data/kuka_iiwa/: kuka_with_gripper2 (copy).urdf  kuka_with_gripper2.sdf  kuka_with_gripper2.urdf
data/laikago/: laikago_toes_zup.urdf  laikago_toes_zup_box.urdf
data/mujoco/: ant.xml  mbpo_ant_mujoco.npy
data/punch/: p2.urdf  p5.urdf  sphere.urdf
data/push/: sphere2.urdf  sphere_1joint.urdf  tau.npy
examples/: CMakeLists.txt  ceres_utils.h  cppad_utils.h  meshcat_urdf_visualizer.h  meshcat_zmq.h  neural_scalar.h  pybullet_urdf_import.h  stan_double_utils.h  tiny_ceres_estimator.h  tiny_urdf_parser.h
meshcat/: .gitignore
python/: .gitignore  CMakeLists.txt  api_diff.py  exp_ant.py  exp_car.py  exp_punch.py  exp_throw.py  pydiffarti.cc
(+6 files in other folders)
